* Removed $wgCheckCopyrightUpload from DefaultSettings, since the relevant feature
  was removed in about 1.5.
* LogPageValidTypes, LogPageLogName, LogPageLogHeader and LogPageActionText
  hooks have been removed.
* New hook "Collation::factory" to allow extensions to create custom
  category collations.
* $wgGroupPermissions now supports per namespace permissions.

=== New features in 1.18 ===
* BREAKING CHANGE: action=watch / action=unwatch now requires a token.
* (bug 8130) Query pages should limit to content namespaces, not just main
  namespace.
* Search suggestions (other than in the Vector skin) will now use the HTML5
  datalist feature where supported, currently only Firefox 4.
* Special:Contribs now redirects to Special:Contributions.
* (bug 6672) Images are now autorotated according to their EXIF orientation.
  This only affects thumbnails; the source remains unrotated.
* (bug 25708) Update case mappings and normalization to Unicode 6.0.0
* New hook ArticlePrepareTextForEdit added, called when preparing text to be
  saved.
* New parser option PreSaveTransform added, allows the pre-save transformation
  to be selectively disabled.
* Alternative to $wgHooks implemented, using the new Hooks class.
* Add width parameter to Special:Filepath to allow getting the file path of a
  thumbnail.
* (bug 26870) Add size to {{filepath:}}.
* Upload warnings now show a thumbnail of the uploaded file.
* Introduced the edittools-upload message, which will be inserted under the
  upload form instead of edittools if available.
* (bug 26285) Extensions will be automatically generated on upload if the user
  specified a filename without extension.
* (bug 26851) Special:UserRights now allows to prefill the reason field
* New maintenance script to fix double redirects
  (maintenance/fixDoubleRedirects.php).
* (bug 23315) New body classes to allow easier styling of special pages.
* (bug 27159) Make email confirmation code expiration time configurable.